# rust_ollama_interface

./: Cargo.toml
src/: main.rs
